# Fruit-Picking-Robot-Vision-System

./: README.md  README_EN.md  attention.md
apple_detection/: CMakeLists.txt  package.xml
apple_detection/cmake/: add_dependency.cmake
apple_detection/launch/: run_py.launch
apple_detection/main/: CMakeLists.txt
apple_detection/main/include/: main.hpp
apple_detection/main/sources/: main.cpp
apple_detection/scripts/: camera_subscriber_node.py  enhanced_coordinate_listener.py  enhanced_simplified_camera_subscriber_node.py
apple_detection/yolo/yolov8/include/: Yolov8.hpp
apple_detection/yolo/yolov8/model/: classes.txt
apple_detection/yolo/yolov8/sources/: Yolov8.cpp
cv_bridge_1/: CMakeLists.txt
moveit_ctrl/: CMakeLists.txt  package.xml
moveit_ctrl/msg/: JoystickState.msg
moveit_ctrl/scripts/: joint_moveit_ctrl.py
xbox_chassis/: CMakeLists.txt  package.xml  通信协议.md
xbox_chassis/main/: CMakeLists.txt
xbox_chassis/main/sources/: main.cpp
